upload file to storage

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -23,5 +23,29 @@
 				}
 			}
 		}
+	},
+	"function": {
+		"S3Triggerda00594c": {
+			"service": "Lambda",
+			"providerPlugin": "awscloudformation",
+			"build": true
+		}
+	},
+	"storage": {
+		"photoalbstorage": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": [
+				{
+					"category": "function",
+					"resourceName": "S3Triggerda00594c",
+					"attributes": [
+						"Name",
+						"Arn",
+						"LambdaExecutionRole"
+					]
+				}
+			]
+		}
 	}
 }
